.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b4 - Unreleased
------------------

- Update the ZMI security tab warning so it doesn't display outside of a Plone
  site.  This fixes http://dev.plone.org/plone/ticket/10521.
  [davisagli]

- Get configlet icons directly from the action, rather than using the
  getIconFor helper.  This breaks the backwards-compatible fallback to the
  action icons tool, but avoids re-evaluating all action conditions for each
  configlet.
  [davisagli]

- Report expiration of password resets for registration as an absolute time,
  rather than a number of hours.
  [davisagli]

4.0b3 - 2010-05-03
------------------

- "(Requires Javascript)" is now translatable in accessibility-info.pt.
  This closes http://dev.plone.org/plone/ticket/10475
  [vincentfretin]

- Revert changes from changeset 34269, which prevented the calendar widget
  from properly saving results. Add another hidden field for the purposes
  of handling the label's for attribute.
  Fixes http://dev.plone.org/plone/ticket/10450
  [esteele]

- Update capitalization of i18n:translate-d tags in deprecated templates to
  avoid i18ndude warnings on new templates.
  [esteele]

- Updated default_error_message.pt to provide a better 404 Error page as per
  http://dev.plone.org/plone/ticket/8667
  [cwainwright, dunlapm]

- Fixed newsitem_view to not render the caption if the field is empty.
  [limi]

- Moved old GIF variants of the icons to plone_deprecated, since Plone itself
  uses the PNG variants now.
  [limi]

- Added touch_icon.png for iPhone/iPad home screen support.
  [limi]

- Fixed clipped icons for most of the content type sprites by centralizing the
  definitions and setting line-height to 2em. There's still an issue where
  tal:replace="structure item_icon/html_tag" renders an img tag without src or